--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://en.wikipedia.org/wiki/Web_performance_optimization","creator":"http://perfmonkey.com","rand":0.40537603036500514,"created_at":"2014-07-01T23:22:52.912Z"}
