--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"website":"http://en.wikipedia.org/wiki/Web_performance_optimization","creator":"http://perfmonkey.com","rand":0.40537603036500514,"created_at":"2014-07-01T23:22:52.912Z"}
+{"website":"http://www.perfmonkey.com","creator":"http://perfmonkey.com","rand":0.7840322984848171,"created_at":"2014-07-13T08:24:48.749Z"}
